--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "angular-2-dropdown-multiselect": "^1.8.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^1.9.1",
