--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "angular-2-dropdown-multiselect": "^1.8.1",
+    "angular2-fontawesome": "^5.2.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.2",
