--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-        location /interfacelog/ {
+        location /ai2018/ {
             alias /usr/share/nginx/html/ai2018/;
             try_files $uri $uri/ index.html /index.html =404;
         }
