--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "angular-2-dropdown-multiselect": "^1.8.1",
+    "angular2-datatable": "^0.6.0",
     "angular2-fontawesome": "^5.2.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
