--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
+    "ng4-loading-spinner": "^1.2.3",
     "ngx-toastr": "^9.0.2",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.2",
